# rnm

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
src/utils/: files.rs  mod.rs  string.rs
tests/: cli.rs
